<resources>
    <string name="app_name">AirQuality</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis quis euismod tellus, ac varius eros. Phasellus sem urna, vulputate quis velit vel, venenatis aliquet lacus. Etiam hendrerit justo sit amet magna vehicula sagittis. Integer quis elit non arcu dignissim dictum quis at ligula. Cras eu sollicitudin nisl. Quisque posuere tristique malesuada. Vestibulum vel sapien et purus ullamcorper egestas id sed est. Pellentesque imperdiet consectetur efficitur.</string>
    <string name="city_description">Guangzhou, known as Canton, is a modern, vigorous metropolis. It is the third largest city in China and is the political, economic, sci-tech, educational and cultural hub of southern China. It is located in south-central Guangdong Province, north of the Pearl River Delta.</string>
    <string name="time_stamp">2018-10-15T01:00:00.000Z</string>
    <string name="aqi">AQI</string>
    <string name="aqi_rating">AQI Rating</string>
    <string name="aqi_us">U.S. AQI: 110</string>
    <string name="main_pollutant_us">Main Pollutant (U.S.): PM 2.5</string>
    <string name="aqi_cn">China AQI: 60</string>
    <string name="main_pollutant_cn">Main Pollutant (China): PM 2.5</string>
    <string name="coordinates">43.5890° N, 79.6441° W</string>
    <string name="unsplash_client_id">2ef4adbbc6aa68fb62acbf7170933cbc25526420aa6da426c16cb0c08ce5cffd</string>
    <string name="favorite">Favorite</string>
    <string name="delete">Delete</string>
    <string name="mapbox_token">pk.eyJ1Ijoia2V2aW5sIiwiYSI6ImNqbHF1Mjg0dDJrNWUzcHBhMTR2MnZzYm0ifQ.0SvrPQ1-FatZj34diqfN3Q</string>
    <string name="city_name">City</string>
    <string name="country_name">Country</string>

    <string name="pref_aqiList_default_value">United States</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
