<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    tools:context=".CurrentAirQualityFragment"
    android:id="@+id/current_bg" >

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/current_swipeRefresh"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    
    <LinearLayout
        android:id="@+id/current_panel"
        android:orientation="vertical"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/cityAQIRating"
            android:paddingTop="64dp"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="52sp"
            android:text="@string/aqi_rating"
            android:textStyle="normal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/cityName"
            android:paddingTop="16dp"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            android:text="@string/city_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/cityAQI"
            android:paddingTop="16dp"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="128sp"
            android:text="@string/aqi"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/cityTimestamp"
            android:paddingTop="16dp"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:text="@string/time_stamp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

</android.support.v4.widget.SwipeRefreshLayout>

    <ProgressBar
        android:id="@+id/current_progress_bar"
        android:indeterminate="true"
        android:indeterminateTintMode="src_atop"
        android:indeterminateTint="@color/colorPrimaryLight"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
</RelativeLayout>