<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:mapbox="http://schemas.android.com/tools"
    style="@style/CardView.Light"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleTextAppearance="@android:color/transparent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:id="@+id/cityImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="content description for ImageView"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_launcher_background"
                app:layout_collapseMode="parallax" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/cityToolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:title="@string/app_name">
                <!--<TextView-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="match_parent"-->
                    <!--android:text="yeet"/>-->
            </android.support.v7.widget.Toolbar>

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!--<TextView-->
                <!--android:id="@+id/cityDescription"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_marginTop="20dp"-->
                <!--android:layout_marginLeft="20dp"-->
                <!--android:layout_marginRight="20dp"-->
                <!--android:layout_marginBottom="10dp"-->
                <!--android:text="@string/city_description"-->
                <!--android:textColor="@color/black"-->
                <!--android:textSize="16dp" />-->

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="11dp"
                android:layout_marginRight="11dp"
                android:elevation="5dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/cityCoordinates"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginLeft="8dp"
                        android:text="@string/coordinates"
                        android:textColor="@color/black"
                        android:textSize="16dp" />

                    <TextView
                        android:id="@+id/cityTimestamp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:text="@string/time_stamp"
                        android:textColor="@color/black"
                        android:textSize="16dp" />

                    <TextView
                        android:id="@+id/cityAQIUS"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:text="@string/aqi_us"
                        android:textColor="@color/black"
                        android:textSize="16dp" />

                    <TextView
                        android:id="@+id/cityMainPollutantUS"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:text="@string/main_pollutant_us"
                        android:textColor="@color/black"
                        android:textSize="16dp" />

                    <TextView
                        android:id="@+id/cityAQICN"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:text="@string/aqi_cn"
                        android:textColor="@color/black"
                        android:textSize="16dp" />

                    <TextView
                        android:id="@+id/cityMainPollutantCN"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:layout_marginLeft="8dp"
                        android:text="@string/main_pollutant_cn"
                        android:textColor="@color/black"
                        android:textSize="16dp" />
                </LinearLayout>
            </android.support.v7.widget.CardView>
            <com.mapbox.mapboxsdk.maps.MapView
                android:id="@+id/mapView"
                android:layout_width="match_parent"
                android:layout_height="500dp"
                mapbox:mapbox_cameraTargetLat="41.885"
                mapbox:mapbox_cameraTargetLng="-87.679"
                mapbox:mapbox_cameraTilt="60"
                mapbox:mapbox_cameraZoom="12"
                mapbox:mapbox_styleUrl="@string/mapbox_style_light" />
        </LinearLayout>

        <!--<android.support.v7.widget.CardView-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginBottom="16dp"-->
        <!--app:cardUseCompatPadding="true"-->
        <!--android:elevation="5dp">-->

        <!--<LinearLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:orientation="vertical"-->
        <!--&gt;-->
        <!---->
        <!--<TextView-->
        <!--android:text="The airquality in "-->
        <!--android:textSize="16dp"-->
        <!--android:layout_margin="10dp"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content" />-->

        <!--</LinearLayout>-->

        <!--</android.support.v7.widget.CardView>-->

    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>